# cpp-base-project

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  readme.md  setup_environment.sh
src/: main.cpp
